--- a/whattoeat/application/modules/portal/views/scripts/cliente/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/cliente/index.phtml
@@ -1,104 +1,99 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-	<!-- Bootstrap core CSS -->
-     <link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-	
-	<!-- Bootstrap theme -->
-     <link type="text/css" href="/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
-	
+    <!-- Bootstrap core CSS -->
+    <link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+
+    <!-- Bootstrap theme -->
+    <link type="text/css" href="/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
+
     <link type="text/css" href="/css/portal.css" rel="stylesheet" />
     <link type="text/css" href="/js/jui/css/pepper-grinder/jquery-ui-1.8.9.custom.css" rel="stylesheet" />
 
-    <script type="text/javascript" src="/js/jui/js/jquery-1.4.4.min.js"></script>
-    <script type="text/javascript" src="/js/common.js"></script>
-    <script type="text/javascript" src="/js/jui/js/jquery-ui-1.8.9.custom.min.js"></script>
-    <script type="text/javascript" src="/js/portal.js"></script>
-    <script type="text/javascript" src="/js/validation-new.js"></script>
-    <script type="text/javascript" src="/js/mootools/mootools-core-1.4.2-full-compat.js"></script>
 </head>
 
 <body>
 
-	<div class="header">
-		<div class="logo"><img src="/img/logotipo.png"></div>
-	</div>
-	<div class="conta">
-	<div class="heading">
-    
-    <h2><?php echo $this->headline; ?></h2>
-
-	
-    <?php if($this->isFecharPedido) {?>
-
-    <h2> Percebemos que você ainda não está logado. Por favor, crie sua conta ou faça login antes de continuar. </h2>
-
-    <?php } ?>
-	</div>
-	
-	
-    <div class="main-content" >
-    <ul class="columnListing">
-	<li class="leftSide">
-	<form action="/portal/cliente/criar-Conta" method="POST" class="frm" name="form1" id='form1' onsubmit="return validaTermoAceite(this);">
-
-	<h3>Crie sua conta</h3>
-	<br>
-	* Email: <input type="text" class="input-medium RQR required validEmail form-control" title="Por favor, indique o email." name="cliente[email]" value="<?php //echo $this->cliente['email'] ?>"  onblur="checkMailAjax(this.value);">
-	<div class='bodyTextSmall'> <span class='tip'></span> <span class='missing' id="spanMail"></span></div>
-	<br>
-	* Nome completo: <input type="text"  class="input-medium RQR required form-control" title="Por favor, indique seu nome." name="cliente[nome]" value="<?php //echo $this->cliente['nome'] ?>">
-	<div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
-	<br>
-	* Senha: <input type="password" class="input-medium RQR required form-control" title="Por favor, entre com uma senha." id="senha" name="cliente[senha]">
-	<div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
-	<br>
-	* Confirme senha: <input type="password" class="input-medium RQR required form-control" tithe="Por favor, repita a senha." id="senha_repetida" name="cliente[senha_repetida]">
-	<div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
-	<br>
-	* Telefone celular com DDD: <input type="text" maxlength="14" onkeypress="return formataTelefone(document.form1, 'cliente[celular]', '(99) 9999-9999', event)" class="input-medium RQR required form-control" title="Por favor, indique um telefone." name="cliente[celular]" value="<?php //echo $this->cliente['celular'] ?>">
-	<br><br>
-	<input type="checkbox"  id="aceite" name="cliente[aceite]" checked> Estou de acordo com os <a href="#">termos e condicões </a> do site.
-
-	<br>
-	Digite o código como aparece na imagem: <input class="form-control" type="text" name="captcha">
-	<br>
-	<br>
-	<!-- Essa flag indica se o usuario chegou aqui na tentativa de fechar um pedido -->
-	<input type="hidden" name="isFecharPedido" value="<?php echo $this->isFecharPedido ?>">
-	<input class="btn btn-lg btn-primary btn-block" type="submit" name="criarConta" value="Criar Minha Conta">
-
-     </form>
-	</li>
- 
-	<li class="option-callout">
-		<p>ou</p>
-	</li>
- 
-	<li class="rightSide">
-    <form action="/portal/cliente/login" method="POST" class="frm form-signin" role="form" id='form2' onsubmit="return validateForm('form2');">
-
-	<h3>Login</h3>
-	<br>
-	* Email: <input class="form-control" type="email" class="input-medium RQR required" title="Por favor, indique o email." name="email-login">
-	<div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
-	<br>
-	* Senha: <input class="form-control" type="password" class="input-medium RQR required" title="Por favor, entre com uma senha." name="senha-login">
-	<div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div><br />
-
-	<!-- Essa flag indica se o usuario chegou aqui na tentativa de fechar um pedido -->
-	<input type="hidden" name="isFecharPedido" value="<?php echo $this->isFecharPedido ?>" >
-
-	<input class="btn btn-lg btn-primary btn-block" type="submit" name="login" value="Login" />
-	<br />
-	<br />
-	
-     </form>
-	 </li>
-	</ul>
+    <div class="header">
+        <div class="logo" ><a href="/portal/"><img alt='buscacomabem' src="<?php echo $this->serverUrl(); ?>/img/logotipo.png"></a></div>
+        <a href="https://www.facebook.com/buscacomabem/" target="_blank"><div class="facebook"><img alt='facebook' src="<?php echo $this->serverUrl(); ?>/img/facebook.png"></div></a>		
     </div>
-	
-</div>
+    <div class="conta">
+        <div class="heading">
+
+            <h2><?php echo $this->headline; ?></h2>
+
+
+            <?php if ($this->isFecharPedido) { ?>
+
+                <h2> Percebemos que você ainda não está logado. Por favor, crie sua conta ou faça login antes de continuar. </h2>
+
+            <?php } ?>
+        </div>
+
+
+        <div class="main-content" >
+            <ul class="columnListing">
+                <li class="leftSide">
+                    <form action="/portal/cliente/criar-Conta" method="POST" class="frm" name="form1" id='form1' onsubmit="return validaTermoAceite(this);">
+
+                        <h3>Crie sua conta</h3>
+                        <br>
+                        * Email: <input type="text" class="input-medium RQR required validEmail form-control" title="Por favor, indique o email." name="cliente[email]" value="<?php //echo $this->cliente['email']  ?>"  onblur="checkMailAjax(this.value);">
+                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing' id="spanMail"></span></div>
+                        <br>
+                        * Nome completo: <input type="text"  class="input-medium RQR required form-control" title="Por favor, indique seu nome." name="cliente[nome]" value="<?php //echo $this->cliente['nome']  ?>">
+                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
+                        <br>
+                        * Senha: <input type="password" class="input-medium RQR required form-control" title="Por favor, entre com uma senha." id="senha" name="cliente[senha]">
+                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
+                        <br>
+                        * Confirme senha: <input type="password" class="input-medium RQR required form-control" tithe="Por favor, repita a senha." id="senha_repetida" name="cliente[senha_repetida]">
+                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
+                        <br>
+                        * Telefone celular com DDD: <input type="text" maxlength="14" onkeypress="return formataTelefone(document.form1, 'cliente[celular]', '(99) 9999-9999', event)" class="input-medium RQR required form-control" title="Por favor, indique um telefone." name="cliente[celular]" value="<?php //echo $this->cliente['celular']  ?>">
+                        <br><br>
+                        <input type="checkbox"  id="aceite" name="cliente[aceite]" checked> Estou de acordo com os <a href="#">termos e condicões </a> do site.
+
+                        <br>
+                        Digite o código como aparece na imagem: <input class="form-control" type="text" name="captcha">
+                        <br>
+                        <br>
+                        <!-- Essa flag indica se o usuario chegou aqui na tentativa de fechar um pedido -->
+                        <input type="hidden" name="isFecharPedido" value="<?php echo $this->isFecharPedido ?>">
+                        <input class="btn btn-lg btn-primary btn-block" type="submit" name="criarConta" value="Criar Minha Conta">
+
+                    </form>
+                </li>
+
+                <li class="option-callout">
+                    <p>ou</p>
+                </li>
+
+                <li class="rightSide">
+                    <form action="/portal/cliente/login" method="POST" class="frm form-signin" role="form" id='form2' onsubmit="return validateForm('form2');">
+
+                        <h3>Login</h3>
+                        <br>
+                        * Email: <input class="form-control" type="email" class="input-medium RQR required" title="Por favor, indique o email." name="email-login">
+                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div>
+                        <br>
+                        * Senha: <input class="form-control" type="password" class="input-medium RQR required" title="Por favor, entre com uma senha." name="senha-login">
+                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div><br />
+
+                        <!-- Essa flag indica se o usuario chegou aqui na tentativa de fechar um pedido -->
+                        <input type="hidden" name="isFecharPedido" value="<?php echo $this->isFecharPedido ?>" >
+
+                        <input class="btn btn-lg btn-primary btn-block" type="submit" name="login" value="Login" />
+                        <br />
+                        <br />
+
+                    </form>
+                </li>
+            </ul>
+        </div>
+
+    </div>
 
 
 
@@ -108,40 +103,38 @@
 
 <script>
 
- function validaTermoAceite(form)
- {
-    var validacao =  validateForm('form1');
-
-    if(!form.aceite.checked)
+    function validaTermoAceite(form)
     {
-	alert("Você deve aceitar as condições antes de prosseguir.");
-	return false;
+        var validacao = validateForm('form1');
+
+        if (!form.aceite.checked)
+        {
+            alert("Você deve aceitar as condições antes de prosseguir.");
+            return false;
+
+        } else if (!isEmpty(form.senha.value) && !isBlank(form.senha.value) && form.senha.value != form.senha_repetida.value)
+        {
+            alert("Senhas não conferem!");
+            return false;
+
+
+        } else
+        {
+            return validacao;
+        }
+
 
     }
-    else if(!isEmpty(form.senha.value) && !isBlank(form.senha.value) && form.senha.value != form.senha_repetida.value)
-    {
-	alert("Senhas não conferem!");
-	return false;
 
-
-    }
-    else
-    {
-	return validacao;
+    function isEmpty(str) {
+        return (!str || 0 === str.length);
     }
 
-    
- }
-
-function isEmpty(str) {
-    return (!str || 0 === str.length);
-}
-
-function isBlank(str) {
-    return (!str || /^\s*$/.test(str));
-}
+    function isBlank(str) {
+        return (!str || /^\s*$/.test(str));
+    }
 
 
-  
+
 
 </script>
