--- a/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
@@ -1,6 +1,6 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
+    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico"/>
     <!-- Bootstrap core CSS -->
     <link type="text/css" href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
@@ -21,7 +21,7 @@
     <script>
         $(document).ready(function () {
             $('.filterexpand').click(function () {
-    
+
                 $('#filtroMenu').animate({
                     height: 'toggle'
                 });  //Mostra MEnu Filtro   
@@ -41,53 +41,53 @@
     </script>
 
     <style>
-    .filterexpand {
-  color: rgb(0, 0, 0) !important;
-  float: left;
-  padding: 2px 0px;
-  text-align: left;
-  width: auto;
-  cursor:pointer;
-}
+        .filterexpand {
+            color: rgb(0, 0, 0) !important;
+            float: left;
+            padding: 2px 0px;
+            text-align: left;
+            width: auto;
+            cursor:pointer;
+        }
 
 
 
-#filtroMenu {
-  background: none repeat scroll 0 0 rgb(238, 238, 238);
-  border: medium none rgb(204, 204, 204);
-  border-radius: 0;
-  color: rgb(102, 102, 102);
-  display: none;
-  font-family: arial !important;
-  font-size: 19px;
-  height: auto;
-  margin-top: 0;
-  padding: 30px 68px;
-  text-align: left;
-  top: 215px;
-  width: 682px;
-}
-#filtroMenu div{
-    font-size:14px;
-}
+        #filtroMenu {
+            background: none repeat scroll 0 0 rgb(238, 238, 238);
+            border: medium none rgb(204, 204, 204);
+            border-radius: 0;
+            color: rgb(102, 102, 102);
+            display: none;
+            font-family: arial !important;
+            font-size: 19px;
+            height: auto;
+            margin-top: 0;
+            padding: 30px 68px;
+            text-align: left;
+            top: 215px;
+            width: 682px;
+        }
+        #filtroMenu div{
+            font-size:14px;
+        }
         #confirmaFiltro{
             margin-top:15px;
         }
         #filtroResult:hover{cursor: pointer;opacity: 0.8}
         #filtroResult{position:absolute;margin-top:-68px;margin-left:550px;background: rgba(0,0,0,0.7);padding: 10px;border: none;color: #FFFFFF;font-weight: bold;font-size: 20px}
         #filtroMenu input{margin-left: 0px}
-.mainouter {
-  background-color: rgb(238, 238, 238);
-  color: rgb(0, 0, 0);
-  float: left;
-  margin-bottom: 10px;
-  padding: 25px;
-  width: 100% !important;
-}
-      .innerimg {
-  float: left;
-  margin: 0;
-}
+        .mainouter {
+            background-color: rgb(238, 238, 238);
+            color: rgb(0, 0, 0);
+            float: left;
+            margin-bottom: 10px;
+            padding: 25px;
+            width: 100% !important;
+        }
+        .innerimg {
+            float: left;
+            margin: 0;
+        }
         .inner_filter{
             position:relative;
             margin-top:60px;
@@ -114,7 +114,7 @@
         .inner_searchbar {
             background: #eee;
             box-shadow: none;
-                margin-top: 0px;
+            margin-top: 0px;
             padding: 25px;
             position: relative;
             width: 682px;}
@@ -128,33 +128,33 @@
             padding: 17px;
             border-radius:0px;
         }
-  .inputbtn {
-  background: none repeat scroll 0 0 rgb(255, 255, 255);
-  border: 1px solid rgb(204, 204, 204);
-  border-radius: 0;
-  box-shadow: none;
-  float: left;
-  height: 60px;
-  padding: 20px;
-  width: 510px;
-}
-.inner_cart {
-  border: 1px solid rgb(221, 221, 221);
-  float: right;
-  margin-right: 0;
-  margin-top: 18px;
-  padding: 0 15px;
-  margin-bottom: 50px;
-}
-.innerimg p{
-    margin-bottom:0px;
-}
+        .inputbtn {
+            background: none repeat scroll 0 0 rgb(255, 255, 255);
+            border: 1px solid rgb(204, 204, 204);
+            border-radius: 0;
+            box-shadow: none;
+            float: left;
+            height: 60px;
+            padding: 20px;
+            width: 510px;
+        }
+        .inner_cart {
+            border: 1px solid rgb(221, 221, 221);
+            float: right;
+            margin-right: 0;
+            margin-top: 18px;
+            padding: 0 15px;
+            margin-bottom: 50px;
+        }
+        .innerimg p{
+            margin-bottom:0px;
+        }
 
 
 
-.inner_filter {
-    position: relative;
-    margin-top: 0;}
+        .inner_filter {
+            position: relative;
+            margin-top: 0;}
         /*.formBuscar h1{
             font-size: 24px;
             line-height: 32px;}*/
@@ -212,39 +212,39 @@ echo " </div>  \n";
 
             <br>
             <br>
-          
+
 
 
             <div class="inner_filter">
                 <!--input type="button" id="filtroResult" value="Filtrar Por &#8628;"-->
                 <div class="inner_searchbar">
 
-                    <input type="textarea" placeholder="Ingredientes específicos, lugares, pratos..." value="<?php echo !empty($this->pesquisa_facapedido_criterio) ? $this->pesquisa_facapedido_criterio : '' ?>" 
+                    <input type="textarea" placeholder="Ingredientes específicos, lugares, pratos..." value="<?php echo!empty($this->pesquisa_facapedido_criterio) ? $this->pesquisa_facapedido_criterio : '' ?>" 
                            name="criterio" class="form-control inputbtn"><input type="submit" value="Pesquisar"  class="btn btn-primary serchbutn">
-                       <span class="filterexpand"> Mais opções de filtro</span>
+                    <span class="filterexpand"> Mais opções de filtro</span>
                 </div>
             </div>
 
             <div id="filtroMenu" class="filtroMenu1">
-                    <div style="width:450; height: 100;">
-                <?php
+                <div style="width:450; height: 100;">
+                    <?php
 //formData2 eh um array comecando do indice 0 e contendo os codigos de tipos de produtos que a empresa trabalha
 //cod_tipo_produto Ã© um array cujo indices sao os cod_tipo_produto e o conteudo o nome do tipo. Contem todos os tipos produtos existentes.
-                $i = 0;
-                foreach (array_keys($this->cod_tipo_produto) as $cod_tipo_produto) {
-                    $checked = " ";
-                    if (!empty($this->pesquisa_facapedido_tipo_produto) && in_array($cod_tipo_produto, $this->pesquisa_facapedido_tipo_produto)) {
-                        $checked = "checked";
-                    }
-                    ?>
-                    <input  type="checkbox" name="cod_tipo_produto[]" <?php echo $checked; ?> value="<?php echo $cod_tipo_produto ?>" class=""> <?php echo $this->cod_tipo_produto[$cod_tipo_produto] ?>
+                    $i = 0;
+                    foreach (array_keys($this->cod_tipo_produto) as $cod_tipo_produto) {
+                        $checked = " ";
+                        if (!empty($this->pesquisa_facapedido_tipo_produto) && in_array($cod_tipo_produto, $this->pesquisa_facapedido_tipo_produto)) {
+                            $checked = "checked";
+                        }
+                        ?>
+                        <input  type="checkbox" name="cod_tipo_produto[]" <?php echo $checked; ?> value="<?php echo $cod_tipo_produto ?>" class=""> <?php echo $this->cod_tipo_produto[$cod_tipo_produto] ?>
 
-                <?php } ?>
-            </div>
-                
-                
-                
-                  <!--p class="lead">CulinÃ¡ria:</p-->
+                    <?php } ?>
+                </div>
+
+
+
+                <!--p class="lead">CulinÃ¡ria:</p-->
                 <font class="lead">Valor calórico até: </font><input  type="text" name="caloria" style="width:50" value="<?php echo $this->pesquisa_facapedido_caloria; ?>">
                 <br>
                 <br>
@@ -266,11 +266,11 @@ echo " </div>  \n";
 
 
         </form>
-         
-    
+
+
         <h4><?php echo $this->headline; ?> </h4>
-    
-        
+
+
     </div>
 
 
@@ -288,8 +288,11 @@ echo " </div>  \n";
         </div> 
 
 
-        <form action="/portal/index/limpar-Carrinho" method="post" class="" >
+        <form action="/portal/loja/limpar-Carrinho" method="post" class="" >
             <div class="topdiv_btn2">
+                <input type='hidden' name="url_loja" value='<?php echo $this->url; ?>'>
+                <input type="hidden" name="cod_empresa" value="<?php echo $this->cod_empresa; ?>">
+                <input type="hidden" name="isAberto" value="<?php echo $this->isAberto; ?>">
                 <input class="btn btn-warning" type="submit" value="Limpar Carrinho"> 
             </div>
         </form>
@@ -308,7 +311,7 @@ echo " </div>  \n";
 
 
     <div class="inner_cart">
-        
+
 
         <table  id="tableListaPedido" style=" border-spacing: 10px; border-collapse: separate;" >  
         </table>
@@ -333,7 +336,7 @@ echo " </div>  \n";
                 <p style='display: block' >
                     <?php echo $this->resultado[$i]["nome"]; ?>
                 <p style='font-size: small;'> 
-                    <?php echo $this->resultado[$i]["descricao"] . "<br> Valor calorico: " ?> <?php echo !empty($this->resultado[$i]["valor_calorico"])?$this->resultado[$i]["valor_calorico"]:$this->resultado[$i]["valor_calorico_aproximado"] ?>   cal 
+                    <?php echo $this->resultado[$i]["descricao"] . "<br> Valor calorico: " ?> <?php echo!empty($this->resultado[$i]["valor_calorico"]) ? $this->resultado[$i]["valor_calorico"] : $this->resultado[$i]["valor_calorico_aproximado"] ?>   cal 
                 </p>
                 </p> </div> <!-- nome do produto -->
 
@@ -353,7 +356,7 @@ echo " </div>  \n";
                 }
 
                 //imprime o botao que vai permitir incluir no carrinho
-               if ($this->isAberto) {
+                if ($this->isAberto) {
                     echo "<img src='/img/Create.png' style='margin-left:5px;'  onclick=\"javascript:addProdutoCarrinhoAjax(" . $this->resultado[$i]['cod_empresa'] . "," . $this->resultado[$i]['cod_tamanho_produto'] . ",'" . $this->resultado[$i]['razao_social'] . "','" . $this->resultado[$i]['nome'] . "','" . $this->resultado[$i]['tamanho'] . "'," . $preco . ")\"> ";
                     echo "<input type='text' style='visibility: hidden;' size='2' maxlength='2' value='1' id='quantidade_" . $this->resultado[$i]['cod_empresa'] . "_" . $this->resultado[$i]['cod_tamanho_produto'] . "'>";
                 }
@@ -376,7 +379,7 @@ echo " </div>  \n";
                             echo "Tamanho " . $this->resultado[$i]['tamanho'] . "  " . $this->resultado[$i]["preco"];
                         }
                         //imprime o botao que vai permitir incluir no carrinho
-                       if ($this->isAberto) {
+                        if ($this->isAberto) {
                             echo "<img src='/img/Create.png' style='margin-left:5px;'  onclick=\"javascript:addProdutoCarrinhoAjax(" . $this->resultado[$i]['cod_empresa'] . "," . $this->resultado[$i]['cod_tamanho_produto'] . ",'" . $this->resultado[$i]['razao_social'] . "','" . $this->resultado[$i]['nome'] . "','" . $this->resultado[$i]['tamanho'] . "'," . $preco . ")\"> ";
                             echo "<input type='text' style='visibility: hidden;' size='2' maxlength='2' value='1' id='quantidade_" . $this->resultado[$i]['cod_empresa'] . "_" . $this->resultado[$i]['cod_tamanho_produto'] . "'>";
                         }
